[gd_scene load_steps=15 format=3 uid="uid://cpumty87felgc"]

[ext_resource type="Script" path="res://battle_demo.gd" id="1_f2em8"]
[ext_resource type="Texture2D" uid="uid://ciu643fgomam" path="res://imgs/2D Pixel Dungeon Asset Pack/character and tileset/Dungeon_Tileset.png" id="1_nrdtq"]
[ext_resource type="PackedScene" uid="uid://wcjmgrgaja2u" path="res://battler/player_battler.tscn" id="2_xfjf2"]
[ext_resource type="Resource" uid="uid://c1f82wtua8ew6" path="res://battler/resources/stats/players/priest.tres" id="3_g6odb"]
[ext_resource type="Resource" uid="uid://c0f1t8buvrqvi" path="res://battler/resources/stats/players/knight.tres" id="4_i0wih"]
[ext_resource type="Resource" uid="uid://cwd1wfyvw77rg" path="res://battler/resources/stats/players/texan.tres" id="5_t8hel"]
[ext_resource type="PackedScene" uid="uid://ds3l1a3ancjmf" path="res://battler/enemy_battler.tscn" id="6_0vedl"]
[ext_resource type="Resource" uid="uid://dtkttwscouvmp" path="res://battler/resources/stats/enemies/skeleton1.tres" id="7_00b1x"]
[ext_resource type="Resource" uid="uid://dulgyo4c03paf" path="res://battler/resources/stats/enemies/vampire.tres" id="8_fxxhv"]
[ext_resource type="Resource" uid="uid://cg50gjnrng0tm" path="res://battler/resources/stats/enemies/skeleton2.tres" id="9_0d7wc"]
[ext_resource type="FontFile" uid="uid://cgrgjim4jsllh" path="res://misc/m5x7.ttf" id="10_605n0"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qr0as"]
texture = ExtResource("1_nrdtq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_3sw7p"]
sources/0 = SubResource("TileSetAtlasSource_qr0as")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fujcv"]
bg_color = Color(0, 0, 0, 0.5)

[node name="BattleDemo" type="Node2D"]
texture_filter = 1
script = ExtResource("1_f2em8")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(0, 8)
tile_set = SubResource("TileSet_3sw7p")
format = 2
layer_0/name = "backgroundground"
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65536, 0, 1, 131072, 0, 1, 196608, 0, 2, 262144, 0, 1, 327680, 0, 2, 393216, 0, 3, 458752, 0, 4, 458759, 196608, 4, 7, 196608, 0, 458753, 65536, 4, 458754, 196608, 4, 458755, 131072, 4, 458756, 262144, 4, 458757, 131072, 4, 458758, 262144, 4, 458760, 131072, 4, 458761, 65536, 4, 458762, 262144, 4, 458763, 65536, 4, 458764, 196608, 4, 458765, 131072, 4, 458766, 262144, 4, 393230, 262144, 3, 327694, 262144, 2, 262158, 262144, 2, 196622, 262144, 2, 131086, 262144, 2, 65550, 262144, 1, 14, 262144, 0, 13, 65536, 0, 12, 131072, 0, 11, 196608, 0, 10, 196608, 0, 9, 65536, 0, 8, 262144, 0, 6, 131072, 0, 5, 262144, 0, 4, 262144, 0, 3, 196608, 0, 2, 196608, 0, 1, 131072, 0, 65537, 65536, 1, 65538, 196608, 1, 131075, 524288, 1, 131076, 524288, 0, 196613, 524288, 2, 196614, 393216, 2, 196615, 524288, 0, 262152, 524288, 0, 262153, 393216, 2, 327690, 458752, 0, 327691, 458752, 1, 393228, 131072, 3, 393229, 196608, 3, 131073, 65536, 2, 196609, 65536, 2, 262145, 65536, 2, 327681, 65536, 2, 393217, 65536, 3, 131074, 458752, 0, 196610, 393216, 2, 262146, 589824, 0, 327682, 589824, 0, 393218, 196608, 3, 65539, 131072, 1, 196611, 393216, 0, 262147, 589824, 0, 327683, 458752, 2, 393219, 196608, 3, 65540, 131072, 1, 196612, 458752, 2, 262148, 589824, 2, 327684, 393216, 0, 393220, 196608, 3, 65541, 196608, 1, 131077, 524288, 1, 262149, 393216, 1, 327685, 458752, 2, 393221, 131072, 3, 65542, 131072, 1, 131078, 393216, 2, 262150, 393216, 2, 327686, 524288, 1, 393222, 131072, 3, 65543, 131072, 1, 131079, 458752, 2, 262151, 524288, 2, 327687, 589824, 2, 393223, 196608, 3, 65544, 196608, 1, 131080, 524288, 1, 196616, 393216, 1, 327688, 393216, 2, 393224, 196608, 3, 65545, 131072, 1, 131081, 524288, 1, 196617, 458752, 1, 327689, 393216, 0, 393225, 131072, 3, 65546, 196608, 1, 131082, 524288, 1, 196618, 458752, 1, 262154, 393216, 1, 393226, 131072, 3, 65547, 131072, 1, 131083, 458752, 0, 196619, 589824, 0, 262155, 524288, 2, 393227, 196608, 3, 65548, 131072, 1, 131084, 524288, 0, 196620, 393216, 1, 262156, 524288, 0, 327692, 393216, 1, 65549, 196608, 1, 131085, 589824, 2, 196621, 458752, 1, 262157, 458752, 2, 327693, 524288, 2, 458767, 327680, 4, 393231, 327680, 2, 327695, 327680, 1, 262159, 327680, 3, 196623, 327680, 1, 131087, 327680, 2, 65551, 327680, 3, 15, 327680, 0, 524288, 524288, 7, 524289, 524288, 7, 524290, 524288, 7, 524291, 524288, 7, 524292, 524288, 7, 524293, 524288, 7, 524294, 524288, 7, 524295, 524288, 7, 524296, 524288, 7, 524297, 524288, 7, 524298, 524288, 7, 524299, 524288, 7, 524300, 524288, 7, 524301, 524288, 7, 524302, 524288, 7, 524303, 524288, 7, -65536, 524288, 7, -65535, 524288, 7, -65534, 524288, 7, -65533, 524288, 7, -65532, 524288, 7, -65531, 524288, 7, -65530, 524288, 7, -65529, 524288, 7, -65528, 524288, 7, -65527, 524288, 7, -65526, 524288, 7, -65525, 524288, 7, -65524, 524288, 7, -65523, 524288, 7, -65522, 524288, 7, -65521, 524288, 7, -65520, 524288, 7, 16, 524288, 7, 65552, 524288, 7, 131088, 524288, 7, 196624, 524288, 7, 262160, 524288, 7, 327696, 524288, 7, 393232, 524288, 7, 458768, 524288, 7, 524304, 524288, 7, 589823, 524288, 7, 524287, 524288, 7, 458751, 524288, 7, 393215, 524288, 7, 327679, 524288, 7, 262143, 524288, 7, 196607, 524288, 7, 131071, 524288, 7, 65535, 524288, 7, -1, 524288, 7, -65537, 524288, 7, -131074, 524288, 7, -131073, 524288, 7, -196608, 524288, 7, -196607, 524288, 7, -196606, 524288, 7, -196605, 524288, 7, -196604, 524288, 7, -196603, 524288, 7, -196602, 524288, 7, -196601, 524288, 7, -131064, 524288, 7, -131063, 524288, 7, -131062, 524288, 7, -131061, 524288, 7, -131060, 524288, 7, -131059, 524288, 7, -131058, 524288, 7, -131057, 524288, 7, -131056, 524288, 7, -65538, 524288, 7, -131072, 524288, 7, -131071, 524288, 7, -131070, 524288, 7, -131069, 524288, 7, -131068, 524288, 7, -131067, 524288, 7, -131066, 524288, 7, -131065, 524288, 7, -196600, 524288, 7, -196599, 524288, 7, -196598, 524288, 7, -196597, 524288, 7, -196596, 524288, 7, -196595, 524288, 7, -196594, 524288, 7, -196593, 524288, 7, -196592, 524288, 7, -196591, 524288, 7, -131055, 524288, 7, 655358, 524288, 7, 720894, 524288, 7, 655359, 524288, 7, 720895, 524288, 7, 589824, 524288, 7, 655360, 524288, 7, 589825, 524288, 7, 655361, 524288, 7, 589826, 524288, 7, 655362, 524288, 7, 589827, 524288, 7, 655363, 524288, 7, 589828, 524288, 7, 655364, 524288, 7, 589829, 524288, 7, 655365, 524288, 7, 589830, 524288, 7, 655366, 524288, 7, 589831, 524288, 7, 655367, 524288, 7, 589832, 524288, 7, 655368, 524288, 7, 589833, 524288, 7, 655369, 524288, 7, 589834, 524288, 7, 655370, 524288, 7, 589835, 524288, 7, 655371, 524288, 7, 589836, 524288, 7, 655372, 524288, 7, 589837, 524288, 7, 655373, 524288, 7, 589838, 524288, 7, 655374, 524288, 7, 589839, 524288, 7, 655375, 524288, 7, 589840, 524288, 7, 655376, 524288, 7, 589841, 524288, 7, 655377, 524288, 7, -65519, 524288, 7, 17, 524288, 7, 65553, 524288, 7, 131089, 524288, 7, 196625, 524288, 7, 262161, 524288, 7, 327697, 524288, 7, 393233, 524288, 7, 458769, 524288, 7, 524305, 524288, 7, -196590, 524288, 7, -131054, 524288, 7, -65518, 524288, 7, 18, 524288, 7, 65554, 524288, 7, 131090, 524288, 7, 196626, 524288, 7, 262162, 524288, 7, 327698, 524288, 7, 393234, 524288, 7, 458770, 524288, 7, 524306, 524288, 7, 589842, 524288, 7, 655378, 524288, 7, -131075, 524288, 7, -65539, 524288, 7, -3, 524288, 7, 65533, 524288, 7, 131069, 524288, 7, 196605, 524288, 7, 262141, 524288, 7, 327677, 524288, 7, 393213, 524288, 7, 458749, 524288, 7, 524285, 524288, 7, 589821, 524288, 7, 655357, 524288, 7, 720893, 524288, 7, -2, 524288, 7, 65534, 524288, 7, 131070, 524288, 7, 196606, 524288, 7, 262142, 524288, 7, 327678, 524288, 7, 393214, 524288, 7, 458750, 524288, 7, 524286, 524288, 7, 589822, 524288, 7)
layer_1/name = "foreground"
layer_1/tile_data = PackedInt32Array(131073, 65536, 9, 327681, 65536, 9, 131083, 458752, 7, 196621, 458752, 7, 327692, 458752, 7, 65548, 524288, 6, 327691, 524288, 6, 393228, 524288, 6, 65537, 262144, 6, 393218, 65536, 8, 196609, 196608, 8, 327694, 196608, 9, 65550, 327680, 6, 393230, 458752, 7)

[node name="PlayerBattler1" parent="." instance=ExtResource("2_xfjf2")]
position = Vector2(94, 41)
stats_resource = ExtResource("3_g6odb")

[node name="PlayerBattler2" parent="." instance=ExtResource("2_xfjf2")]
position = Vector2(78, 64)
stats_resource = ExtResource("4_i0wih")

[node name="PlayerBattler3" parent="." instance=ExtResource("2_xfjf2")]
position = Vector2(94, 88)
stats_resource = ExtResource("5_t8hel")

[node name="EnemyBattler1" parent="." instance=ExtResource("6_0vedl")]
position = Vector2(154, 41)
rotation = 3.14159
scale = Vector2(1, -1)
stats_resource = ExtResource("7_00b1x")

[node name="EnemyBattler2" parent="." instance=ExtResource("6_0vedl")]
position = Vector2(170, 64)
stats_resource = ExtResource("8_fxxhv")

[node name="EnemyBattler3" parent="." instance=ExtResource("6_0vedl")]
position = Vector2(154, 88)
rotation = 3.14159
scale = Vector2(1, -1)
stats_resource = ExtResource("9_0d7wc")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TurnActionButtons" type="HBoxContainer" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 123.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="SkipTurnButton" type="Button" parent="CanvasLayer/TurnActionButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("10_605n0")
theme_override_font_sizes/font_size = 16
text = "Skip Turn"

[node name="SelfHealButton" type="Button" parent="CanvasLayer/TurnActionButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("10_605n0")
theme_override_font_sizes/font_size = 16
text = "Self Heal"

[node name="BlockButton" type="Button" parent="CanvasLayer/TurnActionButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("10_605n0")
theme_override_font_sizes/font_size = 16
text = "Block"

[node name="SkillButton" type="Button" parent="CanvasLayer/TurnActionButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("10_605n0")
theme_override_font_sizes/font_size = 16
text = "Skill"

[node name="AttackButton" type="Button" parent="CanvasLayer/TurnActionButtons"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("10_605n0")
theme_override_font_sizes/font_size = 16
text = "Attack"

[node name="BattleEndPanel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fujcv")

[node name="BattleEndText" type="RichTextLabel" parent="CanvasLayer/BattleEndPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("10_605n0")
theme_override_font_sizes/normal_font_size = 32
text = "yahallo"
